--- a/style.css
+++ b/style.css
@@ -225,7 +225,7 @@ header h1 {
   color: #ff4d4d;
   font-size: 28px;
   font-weight: bold;
-  text-shadow: 2px 2px 6px black;
+  text-shadow: 2px 2px 6px rgb(182, 20, 20);
   animation: pulse 1.5s infinite;
 }
 
@@ -266,7 +266,7 @@ header h1 {
 .glow {
   width: 100%;
   height: 100%;
-  background: radial-gradient(circle at center, rgba(16,185,129,0.3), rgba(0,0,0,0.8));
+  background: radial-gradient(circle at center, rgba(16,185,129,0.3), rgba(58, 219, 98, 0.8));
   position: absolute;
   inset: 0;
   z-index: -1;
