--- a/style.css
+++ b/style.css
@@ -234,9 +234,9 @@ header h1 {
   margin-top: 20px;
   padding: 8px 16px;
   font-size: 14px;
-  background-color: #222;
+  background-color: #7e0000;
   color: #eee;
-  border: 1px solid #444;
+  border: 1px solid #e4e4e4;
   border-radius: 6px;
   cursor: pointer;
 }
@@ -270,7 +270,7 @@ header h1 {
   position: absolute;
   inset: 0;
   z-index: -1;
-  animation: shine 2s ease-in-out forwards;
+  animation: shine 1s ease-in-out forwards;
   pointer-events: none;
 }
 
