--- a/style.css
+++ b/style.css
@@ -267,10 +267,11 @@ header h1 {
   width: 100%;
   height: 100%;
   background: radial-gradient(circle at center, rgba(16,185,129,0.3), rgba(58, 219, 98, 0.8));
+   background-color: #0c6e19;
   position: absolute;
   inset: 0;
   z-index: -1;
-  animation: shine 1s ease-in-out forwards;
+  animation: shine 0,5s ease-in-out forwards;
   pointer-events: none;
 }
 
