--- a/style.css
+++ b/style.css
@@ -234,7 +234,7 @@ header h1 {
   margin-top: 20px;
   padding: 8px 16px;
   font-size: 14px;
-  background-color: #7e0000;
+  background-color: #443b3b;
   color: #eee;
   border: 1px solid #e4e4e4;
   border-radius: 6px;
@@ -242,7 +242,7 @@ header h1 {
 }
 
 #try-again:hover {
-  background-color: #333;
+  background-color: #6e0606;
 }
 
 /* Tela de vitória com brilho verde */
@@ -266,7 +266,7 @@ header h1 {
 .glow {
   width: 100%;
   height: 100%;
-  background: radial-gradient(circle at center, rgba(16,185,129,0.3), rgba(5, 110, 53, 0.911));
+  background: radial-gradient(circle at center, rgba(16, 165, 29, 0.411), rgba(4, 46, 23, 0.911));
   position: absolute;
   inset: 0;
   z-index: -1;
