--- a/style.css
+++ b/style.css
@@ -417,3 +417,46 @@ header h1 {
   text-align: center;
   margin-bottom: 1em;
 }
+.status.child-win {
+  color: white;
+  text-shadow: 0 0 8px rgba(180, 83, 9, 0.8); /* brilho dourado */
+}
+
+.status.win {
+  color: white;
+  text-shadow: 0 0 8px rgba(22, 101, 52, 0.8); /* brilho verde escuro */
+}
+
+.status.child-lose {
+  color: white;
+  text-shadow: 0 0 8px rgba(0, 0, 50, 0.8); /* brilho azul escuro */
+}
+
+.status.lose {
+  color: white;
+  text-shadow: 0 0 8px rgba(0, 0, 0, 0.8); /* brilho preto */
+}
+
+.victory-message,
+.death-message {
+  color: white;
+  font-size: 1.6em;
+  text-align: center;
+  margin-bottom: 1em;
+}
+
+.victory-message.child-win {
+  text-shadow: 0 0 8px rgba(180, 83, 9, 0.8);
+}
+
+.victory-message.win {
+  text-shadow: 0 0 8px rgba(22, 101, 52, 0.8);
+}
+
+.death-message.child-lose {
+  text-shadow: 0 0 8px rgba(0, 0, 50, 0.8);
+}
+
+.death-message.lose {
+  text-shadow: 0 0 8px rgba(0, 0, 0, 0.8);
+}
